--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 /* @import "~bootswatch/dist/Pulse/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/Pulse/bootswatch"; */
+.is-invalid {
+    border-color: #dc3545;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url("./assets/img/errors.svg")!important;
+    background-color: transparent!important;
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
