--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -83,6 +83,22 @@
 
         </div>
         </div>
+        <div class="" formArrayName="daysAvailable">
+            <div class="d-flex justify-content-between align-items-center my-2">
+                <h3>Days Available</h3>
+                <button class="btn btn-primary btn-sm" (click)="addDay()">Add Day</button>
+            </div>
+            <div class="form-group px-1" *ngFor="let day of daysAvailable.controls; let i = index">
+                <label for="day">Day</label>
+                <input type="text" class="  form-control"
+                  
+                  autocomplete  placeholder="day" [formControlName]="i">
+                <div class="text-danger" *ngIf="daysAvailable?.hasError('passwordMisMatch') ">
+                    <small>Password Don't Match</small>   
+                </div>
+            </div>
+
+        </div>
    <p>
     Form Status : {{ userForm.status}}
    </p>
